--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -1110,3 +1110,8 @@ endif
 source "lib/Kconfig"
 
 source "arch/arm64/mm/Kconfig"
+
+config PROJECT_GARLIC
+	tristate "project support"
+	help
+	  This option enables support project name
