--- a/arch/arm/boot/dts/qcom/msm8937-camera-sensor-mtp.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8937-camera-sensor-mtp.dtsi
@@ -54,16 +54,16 @@
 		qcom,cci-master = <0>;
 		reg = <0x0>;
 		cam_vdig-supply = <&pm8937_l23>;
+		cam_vana-supply = <&pm8937_l22>;
 		cam_vio-supply = <&pm8937_l6>;
 		cam_vaf-supply = <&pm8937_l17>;
-		qcom,cam-vreg-name = "cam_vdig", "cam_vio","cam_vaf";
-		qcom,cam-vreg-min-voltage = <1200000  1800000 2850000>;
-		qcom,cam-vreg-max-voltage = <1200000  1800000 2850000>;
-		qcom,cam-vreg-op-mode = <200000  80000 100000>;
+		qcom,cam-vreg-name = "cam_vdig", "cam_vio", "cam_vana", "cam_vaf";
+		qcom,cam-vreg-min-voltage = <1200000 0 2800000 2850000>;
+		qcom,cam-vreg-max-voltage = <1200000 0 2800000 2850000>;
+		qcom,cam-vreg-op-mode = <200000 0 80000 100000>;
 		pinctrl-names = "cam_default", "cam_suspend";
-		pinctrl-0 = <&cam_sensor_mclk0_default
-				&cam_sensor_rear_default>;
-		pinctrl-1 = <&cam_sensor_mclk0_sleep &cam_sensor_rear_sleep>;
+		pinctrl-0 = <&cam_sensor_mclk0_default &cam_sensor_rear_default &cam_sensor_rear_vana>;
+		pinctrl-1 = <&cam_sensor_mclk0_sleep &cam_sensor_rear_sleep &cam_sensor_rear_vana_sleep>;
 		gpios = <&tlmm 26 0>,
 			<&tlmm 36 0>,
 			<&tlmm 35 0>,
@@ -88,19 +88,21 @@
 		cell-index = <1>;
 		reg = <0x1>;
 		compatible = "qcom,eeprom";
+		qcom,slave-addr = <0x6c>;
 		qcom,cci-master = <0>;
+		qcom,num-blocks = <8>;
 		cam_vdig-supply = <&pm8937_l23>;
+		cam_vana-supply = <&pm8937_l22>;
 		cam_vio-supply = <&pm8937_l6>;
-        	qcom,cam-vreg-type = <0 0>;
-		qcom,cam-vreg-name = "cam_vdig", "cam_vio";
-		qcom,cam-vreg-min-voltage = <1200000 1800000>;
-		qcom,cam-vreg-max-voltage = <1200000 1800000>;
-		qcom,cam-vreg-op-mode = <200000 0>;
+		cam_vaf-supply = <&pm8937_l17>;
+		qcom,cam-vreg-name = "cam_vdig", "cam_vio", "cam_vana", "cam_vaf";
+		qcom,cam-vreg-min-voltage = <1200000 0 2800000 2850000>;
+		qcom,cam-vreg-max-voltage = <1200000 0 2800000 2850000>;
+		qcom,cam-vreg-op-mode = <105000 0 80000 100000>;
 		qcom,gpio-no-mux = <0>;
 		pinctrl-names = "cam_default", "cam_suspend";
-		pinctrl-0 = <&cam_sensor_mclk2_default
-			&cam_sensor_front1_default>;
-		pinctrl-1 = <&cam_sensor_mclk2_sleep &cam_sensor_front1_sleep>;
+		pinctrl-0 = <&cam_sensor_mclk2_default &cam_sensor_front1_default &cam_sensor_rear_vana>;
+		pinctrl-1 = <&cam_sensor_mclk2_sleep &cam_sensor_front1_sleep &cam_sensor_rear_vana_sleep>;
 		gpios = <&tlmm 28 0>,
 			<&tlmm 40 0>,
 			<&tlmm 39 0>,
@@ -114,13 +116,12 @@
 					  "CAM_RESET2",
 					  "CAM_STANDBY2",
 					  "CAM_VANA";
-		qcom,cam-power-seq-type = "sensor_vreg", "sensor_vreg",
-			"sensor_gpio", "sensor_gpio", "sensor_gpio" , "sensor_clk";
-		qcom,cam-power-seq-val = "cam_vdig", "cam_vio",
-			"sensor_gpio_reset", "sensor_gpio_standby","sensor_gpio_vana",
-			"sensor_cam_mclk";
+		qcom,cam-power-seq-type = "sensor_vreg","sensor_vreg",
+			"sensor_vreg", "sensor_gpio", "sensor_gpio" , "sensor_clk";
+		qcom,cam-power-seq-val = "cam_vdig", "cam_vana", "cam_vio",
+			"sensor_gpio_reset", "sensor_gpio_standby", "sensor_cam_mclk";
 		qcom,cam-power-seq-cfg-val = <1 1 1 1 1 24000000>;
-		qcom,cam-power-seq-delay = <1 1 30 30 30 5>;
+		qcom,cam-power-seq-delay = <1 1 1 30 30 5>;
 		status = "ok";
 		clocks = <&clock_gcc clk_mclk2_clk_src>,
 			<&clock_gcc clk_gcc_camss_mclk2_clk>;
@@ -169,26 +170,21 @@
 		reg = <0x0>;
 		qcom,csiphy-sd-index = <0>;
 		qcom,csid-sd-index = <0>;
-		qcom,mount-angle = <90>;
+		qcom,mount-angle = <270>;
 		qcom,led-flash-src = <&led_flash0>;
 		qcom,eeprom-src = <&eeprom0>;
 		qcom,actuator-src = <&actuator0>;
 		cam_vdig-supply = <&pm8937_l23>;
+		cam_vana-supply = <&pm8937_l22>;
 		cam_vio-supply = <&pm8937_l6>;
 		cam_vaf-supply = <&pm8937_l17>;
-
-		qcom,cam-vreg-name = "cam_vio","cam_vdig",  
-    							"cam_vaf";
-		qcom,cam-vreg-type = <0 0 0>;
-		qcom,cam-vreg-min-voltage = <1800000 1200000 2850000>;
-		qcom,cam-vreg-max-voltage = <1800000 2800000 2950000>;
-		qcom,cam-vreg-op-mode = <0 80000 100000>;
+		qcom,cam-vreg-name = "cam_vdig", "cam_vio", "cam_vana", "cam_vaf";
+		qcom,cam-vreg-min-voltage = <1200000 0 2800000 2850000>;
+		qcom,cam-vreg-max-voltage = <1200000 0 2800000 2850000>;
+		qcom,cam-vreg-op-mode = <200000 0 80000 100000>;
 		pinctrl-names = "cam_default", "cam_suspend";
-		pinctrl-0 = <&cam_sensor_mclk0_default
-				&cam_sensor_rear_default
-				&cam_sensor_rear_vana>;
-		pinctrl-1 = <&cam_sensor_mclk0_sleep &cam_sensor_rear_sleep
-				&cam_sensor_rear_vana_sleep>;
+		pinctrl-0 = <&cam_sensor_mclk0_default &cam_sensor_rear_default &cam_sensor_rear_vana>;
+		pinctrl-1 = <&cam_sensor_mclk0_sleep &cam_sensor_rear_sleep &cam_sensor_rear_vana_sleep>;
 		gpios = <&tlmm 26 0>,
 			<&tlmm 36 0>,
 			<&tlmm 35 0>,
@@ -215,70 +211,26 @@
 		qcom,clock-rates = <24000000 0>;
 	};
 
-	qcom,camera@1 {
-		cell-index = <1>;
-		compatible = "qcom,camera";
-		reg = <0x1>;
-		qcom,csiphy-sd-index = <1>;
-		qcom,csid-sd-index = <1>;
-		qcom,mount-angle = <90>;
-		qcom,actuator-src = <&actuator2>;
-		qcom,eeprom-src = <&eeprom2>;
-		cam_vdig-supply = <&pm8937_l23>;
-		cam_vana-supply = <&pm8937_l22>;
-		cam_vio-supply = <&pm8937_l6>;
-		cam_vaf-supply = <&pm8937_l17>;
-		qcom,cam-vreg-name = "cam_vdig", "cam_vio", "cam_vana",
-							"cam_vaf";
-		qcom,cam-vreg-min-voltage = <1200000 0 2800000 2850000>;
-		qcom,cam-vreg-max-voltage = <1200000 0 2800000 2850000>;
-		qcom,cam-vreg-op-mode = <200000 0 80000 100000>;
-		pinctrl-names = "cam_default", "cam_suspend";
-		pinctrl-0 = <&cam_sensor_mclk1_default
-				&cam_sensor_front_default>;
-		pinctrl-1 = <&cam_sensor_mclk1_sleep
-				&cam_sensor_front_sleep>;
-		gpios = <&tlmm 27 0>,
-			<&tlmm 38 0>,
-			<&tlmm 50 0>;
-		qcom,gpio-reset = <1>;
-		qcom,gpio-standby = <2>;
-		qcom,gpio-req-tbl-num = <0 1 2>;
-		qcom,gpio-req-tbl-flags = <1 0 0>;
-		qcom,gpio-req-tbl-label = "CAMIF_MCLK1",
-			"CAM_RESET1",
-			"CAM_STANDBY1";
-		qcom,sensor-position = <0x100>;
-		qcom,sensor-mode = <1>;
-		qcom,cci-master = <1>;
-		clocks = <&clock_gcc clk_mclk1_clk_src>,
-				<&clock_gcc clk_gcc_camss_mclk1_clk>;
-		clock-names = "cam_src_clk", "cam_clk";
-		qcom,clock-rates = <24000000 0>;
-	};
-
 	qcom,camera@2 {
 		cell-index = <2>;
 		compatible = "qcom,camera";
 		reg = <0x02>;
 		qcom,csiphy-sd-index = <1>;
 		qcom,csid-sd-index = <1>;
-		qcom,mount-angle = <270>;   
+		qcom,mount-angle = <90>;
 		qcom,eeprom-src = <&eeprom1>;
                 qcom,led-flash-src = <&led_flash0>;
                 cam_vdig-supply = <&pm8937_l23>;
+		cam_vana-supply = <&pm8937_l22>;
 		cam_vio-supply = <&pm8937_l6>;
-		qcom,cam-vreg-type = <0 0>;
-		qcom,cam-vreg-name = "cam_vdig", "cam_vio";
-		qcom,cam-vreg-min-voltage = <1200000 1800000>;
-		qcom,cam-vreg-max-voltage = <1200000 1800000>;
-		qcom,cam-vreg-op-mode = <200000 0>;
+		qcom,cam-vreg-name = "cam_vana", "cam_vdig", "cam_vio";
+		qcom,cam-vreg-min-voltage = <2800000 1200000 0>;
+		qcom,cam-vreg-max-voltage = <2800000 1200000 0>;
+		qcom,cam-vreg-op-mode = <80000 105000 0>;
 		qcom,gpio-no-mux = <0>;
 		pinctrl-names = "cam_default", "cam_suspend";
-		pinctrl-0 = <&cam_sensor_mclk2_default
-				&cam_sensor_front1_default>;
-		pinctrl-1 = <&cam_sensor_mclk2_sleep
-				&cam_sensor_front1_sleep>;
+		pinctrl-0 = <&cam_sensor_mclk2_default &cam_sensor_front1_default &cam_sensor_rear_vana>;
+		pinctrl-1 = <&cam_sensor_mclk2_sleep &cam_sensor_front1_sleep &cam_sensor_rear_vana_sleep>;
 		gpios = <&tlmm 28 0>,
 			<&tlmm 40 0>,
 			<&tlmm 39 0>,
