--- a/arch/arm/boot/dts/qcom/msm8937-camera-sensor-mtp.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8937-camera-sensor-mtp.dtsi
@@ -199,7 +199,7 @@
 		qcom,gpio-req-tbl-label = "CAMIF_MCLK0",
 			"CAM_RESET0",
 			"CAM_STANDBY0",
-			"CAM_VANA0";
+			"CAM_VANA";
 
 		qcom,sensor-position = <0>;
 		qcom,sensor-mode = <0>;
@@ -243,7 +243,7 @@
 		qcom,gpio-req-tbl-label = "CAMIF_MCLK2",
 					  "CAM_RESET2",
 					  "CAM_STANDBY2",
-					  "CAM_VANA2";
+					  "CAM_VANA";
 		qcom,sensor-position = <1>;
 		qcom,sensor-mode = <0>;
 		qcom,cci-master = <0>;
