fingerprint: goodix_qsee: Compile netlink.c

--- a/drivers/input/fingerprint/goodix_qsee/Makefile
+++ b/drivers/input/fingerprint/goodix_qsee/Makefile
@@ -1,7 +1,2 @@
-MODULE_NAME := gf
-obj-y := $(MODULE_NAME).o
-
-$(MODULE_NAME)-objs := gf_spi.o \
-                       platform.o \
-
-
+gf-objs := gf_spi.o platform.o netlink.o
+obj-$(FINGERPRINT_GOODIX_QSEE)	+= gf.o
