--- a/arch/arm64/configs/lineage_garlic_defconfig
+++ b/arch/arm64/configs/lineage_garlic_defconfig
@@ -309,14 +309,14 @@ CONFIG_FREEZER=y
 # CONFIG_ARCH_XGENE is not set
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8916=y
-CONFIG_ARCH_MSM8917=y
-CONFIG_ARCH_MSM8920=y
-CONFIG_ARCH_MSM8940=y
-CONFIG_ARCH_MSM8953=y
+# CONFIG_ARCH_MSM8917 is not set
+# CONFIG_ARCH_MSM8920 is not set
+# CONFIG_ARCH_MSM8940 is not set
+# CONFIG_ARCH_MSM8953 is not set
 # CONFIG_ARCH_SDM450 is not set
 CONFIG_ARCH_MSM8937=y
 # CONFIG_ARCH_MSM8996 is not set
-CONFIG_ARCH_MSMCOBALT=y
+# CONFIG_ARCH_MSMCOBALT is not set
 
 #
 # Bus support
@@ -361,7 +361,6 @@ CONFIG_ARM64_4K_PAGES=y
 # CONFIG_ARM64_64K_PAGES is not set
 # CONFIG_ARM64_DCACHE_DISABLE is not set
 # CONFIG_ARM64_ICACHE_DISABLE is not set
-CONFIG_ARCH_MSM8953_SOC_SETTINGS=y
 CONFIG_ARM64_VA_BITS_39=y
 CONFIG_ARM64_VA_BITS=39
 # CONFIG_CPU_BIG_ENDIAN is not set
@@ -1634,7 +1633,8 @@ CONFIG_WIL6210_PLATFORM_MSM=y
 # CONFIG_MWIFIEX is not set
 CONFIG_CNSS=y
 # CONFIG_CNSS_SDIO is not set
-# CONFIG_CNSS_PCI is not set
+CONFIG_CNSS_PCI=y
+# CONFIG_CNSS_ASYNC is not set
 # CONFIG_CNSS_MAC_BUG is not set
 # CONFIG_CLD_DEBUG is not set
 # CONFIG_CLD_HL_SDIO_CORE is not set
@@ -2073,9 +2073,6 @@ CONFIG_PINCTRL_MSM=y
 # CONFIG_PINCTRL_MSM8X74 is not set
 CONFIG_PINCTRL_MSM8952=y
 CONFIG_PINCTRL_MSM8937=y
-CONFIG_PINCTRL_MSMCOBALT=y
-CONFIG_PINCTRL_MSM8917=y
-CONFIG_PINCTRL_MSM8953=y
 CONFIG_ARCH_HAVE_CUSTOM_GPIO_H=y
 CONFIG_ARCH_WANT_OPTIONAL_GPIOLIB=y
 CONFIG_ARCH_REQUIRE_GPIOLIB=y
@@ -2191,7 +2188,7 @@ CONFIG_POWER_RESET=y
 # CONFIG_POWER_RESET_LTC2952 is not set
 CONFIG_POWER_RESET_MSM=y
 CONFIG_MSM_DLOAD_MODE=y
-# CONFIG_MSM_PRESERVE_MEM is not set
+CONFIG_MSM_PRESERVE_MEM=y
 # CONFIG_POWER_RESET_XGENE is not set
 # CONFIG_POWER_RESET_SYSCON is not set
 # CONFIG_POWER_AVS is not set
@@ -2557,7 +2554,6 @@ CONFIG_MSM_CSI31_HEADER=y
 CONFIG_MSM_CSIPHY=y
 CONFIG_MSM_CSID=y
 CONFIG_MSM_EEPROM=y
-# CONFIG_MSM_ISP_V1 is not set
 CONFIG_MSM_ISPIF=y
 # CONFIG_MSM_ISPIF_V1 is not set
 CONFIG_MSM_ISPIF_V2=y
@@ -2574,8 +2570,7 @@ CONFIG_MSM_V4L2_VIDEO_OVERLAY_DEVICE=y
 CONFIG_MSMB_JPEG=y
 CONFIG_MSM_FD=y
 # CONFIG_MSM_JPEGDMA is not set
-CONFIG_MSM_SEC_CCI_TA_NAME="seccamdemo64"
-# CONFIG_MSM_SEC_CCI_DEBUG is not set
+# CONFIG_LEDS_MSM_GPIO_DUAL_REAR_FLASH_AND_FRONT_FLASH is not set
 # CONFIG_MSM_AIS is not set
 # CONFIG_TSPP is not set
 # CONFIG_MSM_SDE_ROTATOR is not set
@@ -3833,7 +3828,6 @@ CONFIG_MSM_EVENT_TIMER=y
 # CONFIG_MSM_IPC_ROUTER_GLINK_XPRT is not set
 # CONFIG_MSM_SYSTEM_HEALTH_MONITOR is not set
 # CONFIG_MSM_GLINK_PKT is not set
-# CONFIG_MSM_TZ_SMMU is not set
 CONFIG_MSM_SUBSYSTEM_RESTART=y
 CONFIG_MSM_SYSMON_COMM=y
 CONFIG_MSM_PIL=y
